compose/config/envoy-http.yaml
static_resources:
  listeners:
  - name: http_ingress
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: http_ingress
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: local_service
          http_filters:
          - name: envoy.router
            config: {}
          generate_request_id: true
  - name: http_egress
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 50051
    filter_chains:
    - use_proxy_proto: false # will use physical addr
      filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: AUTO
          stat_prefix: egress
          route_config:
            name: egress_route
            virtual_hosts:
            - name: server_vhost
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                  grpc: {}
                route:
                  cluster: grpc_server
          http_filters:
          - name: envoy.router
            config:
              dynamic_stats: true
          server_name: envoy # the server name write to client
          use_remote_address: true # will read x-forward, set the true on edge
          generate_request_id: false
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/opt/mount-data/envoy-http.egress.log"

  clusters:
  - name: local_service
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: http_server
        port_value: 18080
  - name: grpc_server
    connect_timeout: 0.250s
    type: strict_dns
    lb_policy: round_robin
    drain_connections_on_host_removal: true
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: grpc_envoy_1
        port_value: 50051
    - socket_address:
        address: grpc_envoy_2
        port_value: 50051
    health_checks:
    - timeout: 5s
      interval: 10s
      healthy_threshold: 1
      unhealthy_threshold: 2
      reuse_connection: true
      grpc_health_check:
        service_name: proxy
admin:
  access_log_path: "/var/log/envoy/admin_access.log"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
